--- a/0x03-debugging/.gitignore
+++ b/0x03-debugging/.gitignore
@@ -1,1 +1,11 @@
+# Ignore all
+*
+
+# Unignore all with extensions
+!*.*
+
+# Unignore all dirs
+!*/
+
+# others to be ignored
 0-positive_or_negative.c
